--- a/MovieSearch.UI.WebApp/ClientApp/app/components/login/login.component.html
+++ b/MovieSearch.UI.WebApp/ClientApp/app/components/login/login.component.html
@@ -1,14 +1,16 @@
-﻿<form class="form-signin" #loginForm="ngForm" (ngSubmit)="login(loginForm)">
-    <div class="container-fluid">
-        <h2 class="form-signin-heading">Login</h2>
-        <div *ngIf="invalidLogin" class="alert alert-danger">Invalid username or password.</div>
-        <br />
-        <label for="username" class="sr-only">Email address</label>
-        <input type="email" id="email" name="email" ngModel class="form-control" placeholder="Email" required autofocus>
-        <br />
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" ngModel class="form-control" placeholder="Password" required>
-        <br />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </div>
-</form>
+﻿<div class="col-sm-6 col-sm-offset-3">
+    <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+        <div class="container-fluid">
+            <h2 class="form-signin-heading">Login</h2>
+            <div *ngIf="invalidLogin" class="alert alert-danger">Invalid username or password.</div>
+            <br />
+            <label for="username" class="sr-only">Email address</label>
+            <input type="email" id="email" name="email" ngModel class="form-control input-lg" placeholder="Email" required autofocus>
+            <br />
+            <label for="password" class="sr-only">Password</label>
+            <input type="password" id="password" name="password" ngModel class="form-control input-lg" placeholder="Password" required>
+            <br />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </div>
+    </form>
+</div>
